k8s_SOD/homework/echo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deploy
  namespace: playground
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
      metadata:
        labels:
          app: echo
      spec:
        containers:
          - name: echo
            image: ealen/echo-server:latest
            ports:
              - containerPort: 80
