k8s_SOD/homework/ns-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-hw
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-pod-hw
      namespace: default
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: nginx
        # full image path (registry/repo/image:tag)
        image: docker.io/rhoro02/hw-k8s:v1
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
              - name: html
                configMap:
                  name: nginx-html
                  items:
                    - key: index.html
                      path: index.html
