k8s_SOD/homework/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: playground
  labels:
    app: echo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: echo
