k8s_SOD/homework/ns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hw
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31000
  selector:
    app: nginx
