k8s_SOD/homework/network-playground.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-playground
  namespace: playground
spec:
  podSelector: {}
  policyTypes:
    - Ingress
